# stapi-validator

./: LICENSE  README.md  pyproject.toml
tests/: validate_api.py
